Add use counter for CSS zoom:reset and zoom:document.

In order to deprecate or remove these values we need to measure usage.

BUG=642613

Review-Url: https://codereview.chromium.org/2345583005
Cr-Commit-Position: refs/heads/master@{#419284}

Former-commit-id: cffab1f32b8add2dbb2cfdc746b488526663b63b